--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,6 @@
 {
-  "name": "Mon Application Rails",
-  "short_name": "RailsApp",
+  "name": "Wander",
+  "short_name": "Wander",
   "start_url": "/",
-  "display": "fullscreen",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": [
-    {
-      "src": "/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "display": "fullscreen"
 }
