--- a/config/cable.yml
+++ b/config/cable.yml
@@ -10,3 +10,6 @@ production:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   channel_prefix: wander_production
+  ssl_params:
+    verify_mode: 'none'
+    
