--- a/config/cable.yml
+++ b/config/cable.yml
@@ -11,5 +11,5 @@ production:
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   channel_prefix: wander_production
   ssl_params:
-    verify_mode: 'none'
+    verify_mode: OpenSSL::SSL::VERIFY_NONE
 
