front improvments + seeds + highlights

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "wander",
-  "short_name": "w",
+  "short_name": "wander",
   "start_url": "/",
   "display": "fullscreen",
   "background_color": "#000000",
